# faster_rcnn_cplusplus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  faster_rcnn.cpp  faster_rcnn.hpp  main.cpp
data/pascal_voc/: synset_words.txt
